# CSE310-Flight-Reservation-System

./: .gitignore  main.py  pyproject.toml
website/: __init__.py  admin.py  auth.py  data_.py  filters.py  init_db.py  models.py  utils.py  views.py
website/static/scripts/: myScript.js
website/static/styles/: myStyle.css
website/templates/: admin-forms.html  admin.html  base.html  booking_confirmation.html  dashboard.html  footer.html  form-aircraft.html  form-airport.html  form-flight.html  form-login.html  form-manage-flight.html  form-register.html  form-search-flight.html  header.html  index.html  manage-flight-result.html  search_results.html  user.html
